fixed spacing

--- a/hangman-frontend/src/style/hangman.css
+++ b/hangman-frontend/src/style/hangman.css
@@ -46,11 +46,11 @@
   align-items: center;
   align-self: center;
   text-align: center;
-  font-family: "Nunito";
-  font-size: 2rem;
 }
 
-.hangman-info > p {
+.hangman-info > * {
+  font-family: "Nunito";
+  font-size: 2rem;
   margin-top: 10px;
   margin-bottom: 10px;
 }
